# csv_to_docx_streamlit

./: .gitignore  main.py  parse_docx.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: main.py  streamlit_app.py
