[project]
name = "streamlit-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-docx>=1.1.2",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
]
